test/fail/enhanced-migration/enh-mig-test2/m2.mo
module {
    // Introduce field b;
    public func migration(_ : {}) : { b : Bool } { { b = true } };
};
